2003-05-12  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_chown: use of _message -e:
	a 4.1 feature had found its way in

2003-05-12  Peter Stephenson  <pws@csr.com>

	* 18524: Src/utils.c: sepjoin didn't respect !heap for an empty
	array.  Showed up when vared'ing a zero-length array.

2003-05-08  Peter Stephenson  <pws@csr.com>

	* 18512 (modified for 4.0): README, Completion/Unix/Command/_cvs,
	Completion/Unix/Command/_rsync,  Completion/Unix/Type/_path_files,
	Doc/Zsh/expn.yo: 18508 wasn't enough; the \\/ hack was documented
	and in use in the completion system.  Change the documentation,
	mention the inconsistency in README and alter the completion
	system to hide the `/' a parameter so that it doesn't care.

2003-05-07  Peter Stephenson  <pws@csr.com>

	* 18508: Src/subst.c, Test/D04parameter.ztst: quoting of the `/'
	separating source and replacment text in ${foo//bar/stuff} was
	buggy.

2003-04-24  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Type/_perl_basepods: use _message
	instead of echo for error message

	* 18468: Completion/Unix/Type/_perl_builtin_funcs: follow Bart's
	suggestion of using perldoc itself to retrieve the documentation

2003-04-23  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 18467: Src/Zle/computil.c: null pointer dereferenced with
	_arguments '*-+bar'.

	* IKEGAMI Tsutomu: SourceForge bug 722366: initialisation of pwd
	from PWD in environment didn't metafy.

2003-04-23  Oliver Kiddle  <opk@zsh.org>

	* 18462: Completion/Unix/Command/_sh: complete files in addition
	to commands

2003-04-22  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_imagemagick: correct return codes
	
	* 18458: Completion/Unix/Command/_renice: new completion for renice

2003-04-18  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Zsh/Context/_tilde: fix bug where 0 was
	not returned when adding a named directory as a match

	* users/6013: GoTaR <gotar@poczta.onet.pl>: Completion/Unix/Type/_ps,